setup html and css for admin view

--- a/style.css
+++ b/style.css
@@ -71,3 +71,11 @@ body {
   font-size: 150%;
   background-color: white;
 }
+
+#admin > form {
+  visibility: hidden;
+}
+
+#admin.active > form {
+  visibility: visible;
+}
